syntax = "proto3";

package com.scs.apps.twitt;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_outer_classname = "ActivityProto";

message ActivityKey {
  string id = 1;
}

enum ActivityActionType {
  POST_VIEWED = 0;
  POST_LIKED = 1;
  POST_DISLIKED = 2;
}

message ActivityMessage {
  string id = 1;
  ActivityActionType action_type = 2;
  string post_id = 3;

  google.protobuf.Timestamp sync_at = 99;
}

message AggregatedActivityMessage {
  string id = 1;
  int32 likes = 2;
  int32 dislikes = 3;
  int64 views = 4;
  string post_id = 5;
  float rate = 6;

  google.protobuf.Timestamp sync_at = 99;
}